# IOT-Server

./: pyproject.toml
app/: config.py  main.py
app/domain/admin/: model.py
app/domain/device/: controller.py  model.py  repository.py  schemas.py  service.py
app/domain/personal_data/: model.py
app/domain/user/: model.py
app/shared/: enums.py  exceptions.py  pagination.py
app/shared/base_domain/: controller.py  model.py  repository.py  service.py
app/shared/middleware/: cryptography.py
app/shared/services/cryptography/: aes.py  base.py  json_serializer.py
